--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,11 +47,7 @@
         "tsx": "never"
       }
    ],
-   "prettier/prettier": ["error",
-    {
-      "endOfLine": "auto"
-    }
-   ],
+   "prettier/prettier": "error",
    "react/jsx-props-no-spreading": "off",
    "import/prefer-default-export": "off"
   },
