--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.15",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^8.0.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.1.2",
