--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       ]
       }
     ],
+    "no-param-reassign": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": [
       "error"
@@ -47,10 +48,31 @@
         "tsx": "never"
       }
    ],
-   "prettier/prettier": "error",
+   "prettier/prettier": ["error",
+      {
+        "endOfLine":"auto"
+      }
+    ],
    "react/jsx-props-no-spreading": "off",
+   "no-shadow": "off",
    "import/prefer-default-export": "off",
-   "no-shadow": "off"
+   "react/no-unescaped-entities": "off",
+   "react/prop-types": "off",
+   "camelcase": "off",
+   "no-nested-ternary": "off",
+   "@typescript-eslint/naming-convention": [
+    "error",
+    {
+        "selector": "interface",
+        "format": [
+            "PascalCase"
+        ],
+        "custom": {
+            "regex": "^I[A-Z]",
+            "match": true
+        }
+    }
+  ]
   },
   "settings": {
     "import/resolver": {
