--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,6 +60,7 @@
    "react/prop-types": "off",
    "camelcase": "off",
    "no-nested-ternary": "off",
+   "react/jsx-no-bind": "off",
    "@typescript-eslint/naming-convention": [
     "error",
     {
