--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
     "styled-components": "^5.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
+    "@types/react-redux": "^7.1.19",
     "@types/styled-components": "^5.1.15",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
