--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "js-cookie": "^3.0.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -18,6 +19,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.0",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-redux": "^7.1.19",
