--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "env": {
       "browser": true,
-      "es2021": true
+      "es2021": true,
+      "jest": true,
+      "node": true
   },
   "extends": [
       "plugin:react/recommended",
@@ -61,6 +63,7 @@
    "camelcase": "off",
    "no-nested-ternary": "off",
    "react/jsx-no-bind": "off",
+   "import/no-extraneous-dependencies": "off",
    "@typescript-eslint/naming-convention": [
     "error",
     {
