--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.30",
     "@types/react-redux": "^7.1.19",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.15",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
@@ -45,6 +46,8 @@
     "jest": "^27.3.1",
     "jest-styled-components": "^7.0.5",
     "prettier": "^2.2.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.4.4"
   }
 }
