--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@testing-library/dom": "^8.10.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.2",
     "@types/js-cookie": "^3.0.0",
@@ -49,6 +50,7 @@
     "jest": "^27.3.1",
     "jest-styled-components": "^7.0.5",
     "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.4.4"
